hard-gists/7692685/run.log
=== Docker Run Log for 7692685 ===
Started at: Mi 29. Okt 17:15:54 CET 2025

[2025-10-29 17:15:54] START: Running container for 7692685
[2025-10-29 17:15:55] SUCCESS: Container efcd4907b1b13b4a32168bc4760529395e3f5c7587f442e47b0d0228d0063aff started for 7692685
=== Container logs for 7692685 ===
  File "/snippet.py", line 56
    print "How to use Gensim to compute TF-IDF similarity step by step"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7692685 ===
[2025-10-29 17:15:57] INFO: Container efcd4907b1b13b4a32168bc4760529395e3f5c7587f442e47b0d0228d0063aff has stopped
